crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__memory_data_end_lowers_to_memory_offset.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 41
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result:
          Pointer:
            memory: 40
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                MemoryOffset:
                  memory: 40
              ty:
                Pointer:
                  memory: 40
      ty:
        Pointer:
          memory: 40
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - Pointer:
          memory: 40
    params_count: 0
globals: []
exports:
  - Function:
      id: 41
      name: 87
imports: []
memories:
  - id: 40
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates: []
static_entries: []
start_function: ~
