crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__memory_grow_lowers_to_memory_grow.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 8
    signature_index: 0
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                MemoryGrow:
                  memory_index: 0
                  delta:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 0
                    ty: U32
              ty: U32
      ty: U32
signatures:
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 8
      name: 15
imports: []
memories:
  - Memory32
aggregates: []
strings: []
