crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__memory_index_lowers_to_int.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 30
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                MemoryIndex:
                  memory: 29
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      id: 30
      name: 68
imports: []
memories:
  - id: 29
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates: []
static_entries: []
