crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__memory_offset_lowers_to_memory_offset.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 8
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                MemoryOffset:
                  memory_index: 0
              ty: U32
      ty: U32
signatures:
  - items:
      - Unit
      - U32
    params_count: 1
  - items:
      - Unit
      - U32
      - U32
    params_count: 2
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      id: 8
      name: 15
imports: []
memories:
  - Memory32
aggregates: []
strings: []
