crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__non_inline_callee_survives_dce.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 26
    signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Add:
                  left:
                    kind:
                      LocalGet:
                        scope_index: 0
                        local_index: 0
                    ty: U32
                  right:
                    kind:
                      Int:
                        value: 1
                    ty: U32
              ty: U32
      ty: U32
    static_data: []
  - id: 27
    signature_index: 1
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty: U32
            mutability: Immutable
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 26
                    ty:
                      Function:
                        signature_index: 1
                  arguments:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty: U32
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
globals: []
exports:
  - Function:
      id: 27
      name: 63
imports: []
memories: []
aggregates: []
static_entries: []
