crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__size_associated_const.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 26
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 4
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      id: 26
      name: 61
imports: []
memories: []
aggregates: []
static_entries: []
