crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__size_of_generic_monomorphizes.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 35
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 37
                    ty:
                      Function:
                        signature_index: 2
                  arguments: []
              ty: U32
      ty: U32
    static_data: []
  - id: 36
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Call:
                  callee:
                    kind:
                      Function:
                        id: 38
                    ty:
                      Function:
                        signature_index: 2
                  arguments: []
              ty: U32
      ty: U32
    static_data: []
  - id: 37
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 1
              ty: U32
      ty: U32
    static_data: []
  - id: 38
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 4
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      id: 35
      name: 80
  - Function:
      id: 36
      name: 81
imports: []
memories:
  - id: 33
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates: []
static_entries: []
