crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__size_of_lowers_to_const_int.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 46
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 1
              ty: U32
      ty: U32
    static_data: []
  - id: 47
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 4
              ty: U32
      ty: U32
    static_data: []
  - id: 48
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 8
              ty: U32
      ty: U32
    static_data: []
  - id: 49
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals: []
        result: U32
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Int:
                  value: 2
              ty: U32
      ty: U32
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - U32
    params_count: 0
globals: []
exports:
  - Function:
      id: 46
      name: 89
  - Function:
      id: 47
      name: 90
  - Function:
      id: 48
      name: 91
  - Function:
      id: 49
      name: 92
imports: []
memories:
  - id: 45
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates: []
static_entries: []
start_function: ~
