crates/wx-compiler/src/mir/snapshots/wx_compiler__mir__tests__slice_from_parts_lowers_to_aggregate.snap
---
source: crates/wx-compiler/src/mir/tests.rs
expression: case.mir
---
functions:
  - id: 33
    signature_index: 2
    scopes:
      - kind: Block
        parent: ~
        locals:
          - ty:
              Pointer:
                memory: 32
            mutability: Immutable
          - ty: U32
            mutability: Immutable
        result:
          Aggregate:
            aggregate_index: 0
    block:
      kind:
        Block:
          scope_index: 0
          expressions:
            - kind:
                Aggregate:
                  values:
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 0
                      ty:
                        Pointer:
                          memory: 32
                    - kind:
                        LocalGet:
                          scope_index: 0
                          local_index: 1
                      ty: U32
              ty:
                Aggregate:
                  aggregate_index: 0
      ty:
        Aggregate:
          aggregate_index: 0
    static_data: []
signatures:
  - items:
      - U32
      - Bool
    params_count: 1
  - items:
      - U32
      - U32
    params_count: 1
  - items:
      - Pointer:
          memory: 32
      - U32
      - Aggregate:
          aggregate_index: 0
    params_count: 2
globals: []
exports:
  - Function:
      id: 33
      name: 78
imports: []
memories:
  - id: 32
    source: Internal
    kind: Memory32
    min_pages: ~
    max_pages: ~
aggregates:
  - values:
      - Pointer:
          memory: 32
      - U32
    offsets:
      - 0
      - 4
    layout:
      size: 8
      align: 4
    decl_to_phys:
      - 0
      - 1
static_entries: []
